--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = goodfaith
 version = 0.0.1
 author = Ryan Elkins
 author_email = ryan@brevityinmotion.com
-description = Researchers must always act in 'GOODFAITH'
+description = researchers must always hack in 'GOODFAITH'
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/brevityinmotion/goodfaith
@@ -19,6 +19,10 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+
+[options.entry_points]
+console_scripts =
+    goodfaith = goodfaith.__main__:main
 
 [options.packages.find]
 where = src
