functionality fixes and pip build

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = goodfaith
-version = 0.0.1
+version = 0.0.2
 author = Ryan Elkins
 author_email = ryan@brevityinmotion.com
-description = researchers must always hack in 'GOODFAITH'
+description = hack with 'GOODFAITH'
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/brevityinmotion/goodfaith
@@ -11,13 +11,20 @@ project_urls =
     Bug Tracker = https://github.com/brevityinmotion/goodfaith/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GPL-3.0
-    Operating System :: Linux/Unix
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
 package_dir =
     = src
 packages = find:
+install_requires =
+    pandas
+    tldextract
+    argparse
+    regex
+    networkx
+    bokeh
+    scipy
 python_requires = >=3.6
 
 [options.entry_points]
