Fixed functionality and added output types

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = goodfaith
-version = 1.0.2
+version = 1.0.3
 author = Ryan Elkins
 author_email = ryan@brevityinmotion.com
-description = hack with 'GOODFAITH'
+description = hack with 'goodfaith'
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/brevityinmotion/goodfaith
